# tevobot

./: .gitignore  README.md  pyproject.toml  requirements.txt
bot/: bot.py  config.py  db.py  esperanto.py  schema.sql
tools/: conf_update.py  xdxf_parser.py
