[project]
name = "tevobot"
version = "1.0.0"
description = ""
authors = [
    {name = "espero451",email = "253462134+espero451@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot (>=22.5,<23.0)",
]

[project.urls]
"Homepage" = "https://github.com/espero451/tevo_bot"

[project.scripts]
tevobot = "bot.bot:main"

[tool.poetry]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
